Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 Here's the of Inversoft's projects:</p>
 
 <ul>
-<li><a href="http://inversoft.github.io/prime-js/">Prime JS</a></li>
+<li><a href="http://inversoft.github.io/prime.js/">Prime.js</a></li>
 </ul><h2>
 <a name="issues" class="anchor" href="#issues"><span class="octicon octicon-link"></span></a>Issues</h2>
 
