--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Inversoft.github.io : Inversoft's open source projects" />
+    <meta name="description" content="Inversoft.github.io : Inversoft&#39;s open source projects" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/inversoft">View on GitHub</a>
 
           <h1 id="project_title">Inversoft.github.io</h1>
-          <h2 id="project_tagline">Inversoft's open source projects</h2>
+          <h2 id="project_tagline">Inversoft&#39;s open source projects</h2>
 
         </header>
     </div>
@@ -35,6 +35,7 @@ Here's the of Inversoft's projects:</p>
 
 <ul>
 <li><a href="http://inversoft.github.io/prime.js/">Prime.js</a></li>
+<li><a href="http://inversoft.github.io/savant-core/">Savant Build</a></li>
 </ul><h2>
 <a name="issues" class="anchor" href="#issues"><span class="octicon octicon-link"></span></a>Issues</h2>
 
