--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Wed Oct 22 2014 16:37:34 GMT+0000 (UTC) -->
+<!-- Last Published: Thu Oct 23 2014 21:33:24 GMT+0000 (UTC) -->
 <html data-wf-site="543bfc1aa47095511c7163a3" data-wf-page="543bfc1aa47095511c7163a4">
 <head>
   <meta charset="utf-8">
@@ -15,17 +15,18 @@
   <script>
     WebFont.load({
       google: {
-        families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Varela Round:400"]
+        families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]
       }
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="https://daks2k3a4ib2z.cloudfront.net/placeholder/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="apple-touch-icon" href="images/Open-Source-Logo.png">
 </head>
 <body>
   <header class="background header">
     <div class="w-container">
-      <img class="open-source-logo centered" src="images/Open-Source-Logo.png" alt="Inversoft Open Source Logo" width="361">
+      <img class="open-source-logo centered" src="images/Open-Source-Logo_1.png" alt="Inversoft Open Source Logo" width="361">
     </div>
   </header>
   <footer>
@@ -65,7 +66,8 @@
             </div>
             <div class="w-col w-col-8">
               <h2>Prime MVC Framework</h2>
-              <p class="paragraph-adjust">Prime MVC is a Model View Controller written in Java and licensed under theApache License 2.0. Prime MVC is an enterprise quality library and is used in commercially available software from&nbsp;Inversoft.</p>
+              <p class="paragraph-adjust">Prime MVC is an enterprise grade Model-View-Controller written in Java that uses convention over configuration. Building web applications and WebServices with Prime MVC&nbsp;is fast and simple. Inversoft uses Prime MVC in all of our commercial
+                products.&nbsp;</p>
             </div>
           </div>
         </a>
@@ -78,7 +80,7 @@
             </div>
             <div class="w-col w-col-8">
               <h2>Prime Email Template Library</h2>
-              <p class="paragraph-adjust">Prime Email is an enterprise quality library and is used in commercially available software from&nbsp;Inversoft.</p>
+              <p class="paragraph-adjust">Prime Email makes it simple to build email templates and send email via SMTP. Templates are built using FreeMarker and emails can be sent synchronously or asynchronously. Inversoft uses Prime Email in all of our commercial products.</p>
             </div>
           </div>
         </a>
@@ -104,16 +106,21 @@
             </div>
             <div class="w-col w-col-8">
               <h2>SAML V2.0 Library and Tools</h2>
-              <p class="paragraph-adjust">Prime.js is a different kind of JavaScript framework. Prime is written in 100% standard, explicit, and namespaced OO JavaScript.</p>
+              <p class="paragraph-adjust">The Inversoft SAML v2.0 library offers an easy way to work with Security Assertion Markup Language version 2.0 for authentication and authorization. This library provides a plugable framework for identity and role discovery from a SAML IDP.
+                This library is built on JAXB&nbsp;and works with any SAML&nbsp;2.0 compliant back-end.</p>
             </div>
           </div>
         </a>
+      </div>
+      <div class="padding">
+        <p class="centered">For more information about Inversoft and our commercial products, CleanSpeak, Gather and Passport, visit our website at <a href="#">http://www.inversoft.com</a>
+        </p>
       </div>
     </div>
   </footer>
   <div class="footer background">
     <div class="w-container">
-      <img class="centered padding" src="images/Open-Source-Logo.png" alt="Inversoft Open Source Logo" width="308">
+      <img class="centered padding" src="images/Open-Source-Logo_1.png" alt="Inversoft Open Source Logo" width="308">
     </div>
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
