--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Thu Oct 23 2014 21:33:24 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Oct 27 2014 22:42:57 GMT+0000 (UTC) -->
 <html data-wf-site="543bfc1aa47095511c7163a3" data-wf-page="543bfc1aa47095511c7163a4">
 <head>
   <meta charset="utf-8">
@@ -113,7 +113,7 @@
         </a>
       </div>
       <div class="padding">
-        <p class="centered">For more information about Inversoft and our commercial products, CleanSpeak, Gather and Passport, visit our website at <a href="#">http://www.inversoft.com</a>
+        <p class="centered">For more information about Inversoft and our commercial products, CleanSpeak, Gather and Passport, visit our website at <a href="http://www.inversoft.com/">http://www.inversoft.com</a>
         </p>
       </div>
     </div>
